--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@
                 </div>
 
                 <div class="form row">
-                    <button class="btn">Get started</button>
+                    <button class="btn" type="submit">Get started</button>
                     <span class="text">or</span>
                     <a class="link" href="#">Sign in</a>
-
-                        
 
                 </div>
             </form>
