--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
                 <span class="symbol">&amp;</span>
                 <a class="link" href="#">terms of service</a>
             </footer>
-
         </div>
         <div class="right-column">
             <div class="close">x</div>
@@ -38,11 +37,10 @@
                     <Input id="re-pass" type="password" placeholder="Repeat password" required>
                 </div>
 
-                <div class="form row">
+                <div class="form-row">
                     <button class="btn" type="submit">Get started</button>
                     <span class="text">or</span>
-                    <a class="link" href="#">Sign in</a>
-
+                    <a class="link" href="./sign-in/">Sign in</a>
                 </div>
             </form>
 
