--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="./reset.css">
 </head>
 <body>
+    <div class="background"></div>
     <main class="Container">
         <div class="left-column">
-            <h1 class="main-title">Sign up</h1>
+            <h1 class="main-title">Sign in</h1>
             <footer class="bottom-links">
                 <a class="link" href="#">Privacy policy</a>
                 <span class="symbol">&amp;</span>
